update folder source

--- a/apps/backend-repo/package.json
+++ b/apps/backend-repo/package.json
@@ -19,12 +19,12 @@
   "homepage": "https://github.com/kiloo34/backend-repo#readme",
   "description": "",
   "dependencies": {
+    "@my-app/entities": "*",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "firebase": "^11.2.0",
     "firebase-admin": "^13.0.2",
-    "punycode": "^2.3.1",
-    "@my-app/entities": "*"
+    "punycode": "^2.3.1"
   }
 }
