--- a/package.json
+++ b/package.json
@@ -19,5 +19,11 @@
   "workspaces": [
     "apps/*",
     "packages/*"
-  ]
+  ],
+  "dependencies": {
+    "@hookform/resolvers": "^3.10.0",
+    "firebase-admin": "^13.0.2",
+    "react-hook-form": "^7.54.2",
+    "yup": "^1.6.1"
+  }
 }
